@@ -2342,6 +2342,250 @@ literal|"title"
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// literalReplacement = true
+name|d
+operator|=
+name|processAdd
+argument_list|(
+literal|"regex-replace-literal-true"
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"doc2"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"content"
+argument_list|,
+literal|"Let's try this one"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"title"
+argument_list|,
+literal|"Let's try try this one"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Let's<$1> this one"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"content"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Let's<$1><$1> this one"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"title"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// literalReplacement is not specified, defaults to true
+name|d
+operator|=
+name|processAdd
+argument_list|(
+literal|"regex-replace-literal-default-true"
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"doc3"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"content"
+argument_list|,
+literal|"Let's try this one"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"title"
+argument_list|,
+literal|"Let's try try this one"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Let's<$1> this one"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"content"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Let's<$1><$1> this one"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"title"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// if user passes literalReplacement as a string param instead of boolean
+name|d
+operator|=
+name|processAdd
+argument_list|(
+literal|"regex-replace-literal-str-true"
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"doc4"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"content"
+argument_list|,
+literal|"Let's try this one"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"title"
+argument_list|,
+literal|"Let's try try this one"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Let's<$1> this one"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"content"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Let's<$1><$1> this one"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"title"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// This is with literalReplacement = false
+name|d
+operator|=
+name|processAdd
+argument_list|(
+literal|"regex-replace-literal-false"
+argument_list|,
+name|doc
+argument_list|(
+name|f
+argument_list|(
+literal|"id"
+argument_list|,
+literal|"doc5"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"content"
+argument_list|,
+literal|"Let's try this one"
+argument_list|)
+argument_list|,
+name|f
+argument_list|(
+literal|"title"
+argument_list|,
+literal|"Let's try try this one"
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Let's<try> this one"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"content"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"Let's<try><try> this one"
+argument_list|,
+name|d
+operator|.
+name|getFieldValue
+argument_list|(
+literal|"title"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testFirstValue
 specifier|public
